--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whac-a-mole-react",
+  "name": "whac-a-mole-react-game",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +8,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "canvas-confetti": "^1.4.0",
     "gsap": "^3.6.1",
     "prop-types": "^15.7.2",
